added sections to index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
         
     </section>
     <section>
-        
+        <h2>Section 5:Stow away all dishes</h2>
+        <p>Organize all dishes into groups. Cups, Plates, Bowls, and silverware. Open up any and all cabinets you stow your dishes in. Put them away in by gropus.  </p>
+    </section>
+
+    <section> 
+      <h2> Congratulations </h2>
+      <p>You have learned a new skill! We appreciate you visiting our page! </p>
+
     </section>
   </body>
 </html>
