added a missing container

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p>After washing, place each dish in a drying rack while cleaning other dishes.  Once all of your dishes are clean, take a dry towel and wipe your dishes until dry.</p>
         
     </section>
-    <section>
+    <section class="container">
         <h2>Section 5: Stow away all dishes</h2>
         <p>Organize all dishes into groups. Cups, Plates, Bowls, and silverware. Open up any and all cabinets you stow your dishes in. Put them away in by gropus.  </p>
     </section>
